--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://visualcomputing.github.io/showcase"
 languageCode = "en-us"
-title = "Showcase Template"
+title = "Cesar y Sebastian"
 theme = 'book'
 
 # Book configuration
